# ChangeLog for gentoo-x86/virtual
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/jdk/ChangeLog,v 1.1 2006/07/06 10:33:58 nelchael Exp $

*jdk-1.5 (06 Jul 2006)
*jdk-1.4 (06 Jul 2006)
*jdk-1.3 (06 Jul 2006)

  06 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> +metadata.xml,
  +jdk-1.3.ebuild, +jdk-1.4.ebuild, +jdk-1.5.ebuild:
  Initial version of virtual/jdk.
