@@ -1,6 +1,14 @@
 # ChangeLog for gentoo-x86/virtual
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/jre/ChangeLog,v 1.1 2006/07/06 10:28:48 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/jre/ChangeLog,v 1.2 2006/07/08 15:16:38 nelchael Exp $
+
+*jre-1.5.0 (08 Jul 2006)
+*jre-1.4.2 (08 Jul 2006)
+*jre-1.4.1 (08 Jul 2006)
+
+  08 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -jre-1.4.ebuild,
+  +jre-1.4.1.ebuild, +jre-1.4.2.ebuild, -jre-1.5.ebuild, +jre-1.5.0.ebuild:
+  More specific versions.
 
 *jre-1.5 (06 Jul 2006)
 *jre-1.4 (06 Jul 2006)
