@@ -1,6 +1,14 @@
 # ChangeLog for gentoo-x86/virtual
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/jdk/ChangeLog,v 1.1 2006/07/06 10:33:58 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/jdk/ChangeLog,v 1.2 2006/07/08 15:14:57 nelchael Exp $
+
+*jdk-1.5.0 (08 Jul 2006)
+*jdk-1.4.2 (08 Jul 2006)
+*jdk-1.4.1 (08 Jul 2006)
+
+  08 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -jdk-1.4.ebuild,
+  +jdk-1.4.1.ebuild, +jdk-1.4.2.ebuild, -jdk-1.5.ebuild, +jdk-1.5.0.ebuild:
+  More specific versions.
 
 *jdk-1.5 (06 Jul 2006)
 *jdk-1.4 (06 Jul 2006)
